<resources>
    <string name="app_name">Easy Car Rental</string>
    <string name="PickUpDate">Pick Up Date:</string>
    <string name="returnDate">Return Date:</string>
    <string name="pickuplocation">Pick Up Location:</string>
    <string name="returnlocation">Return Location:</string>
    <string name="next">Next</string>
    <string name="btn_back">Back</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="icnumber">NRIC</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">PhoneNumber/ Email Address</string>
    <string name="User_name_cannot_be_empty">Please enter your username!</string>
    <string name="Password_cannot_be_empty">Please enter your password!</string>
    <string name="button_logout">LogOut</string>
</resources>
