<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >

    <LinearLayout style="@style/top_nav">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="#404040"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/common_line_gray_90"/>

    <!-- Register -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#07a6e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >


            <EditText
                android:id="@+id/EditViewFirstName"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/firstname"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#d9d9d9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/EditViewLastName"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/lastname"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#d9d9d9" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/EditViewIC"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/icnumber"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#d9d9d9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/EditViewMobileNumber"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/mobilenumber"
                android:inputType="number"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#d9d9d9" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/EditViewEmail"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#d9d9d9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >


            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#d9d9d9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I am between 24 and 65 years old "
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:paddingBottom="14dp"
            android:paddingTop="18dp"
            android:id="@+id/textViewYearsInfo" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I have at least 2 years of driving experience "
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:paddingBottom="14dp"
            android:paddingTop="18dp"
            android:id="@+id/textViewExpInfo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I agree to the "
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:id="@+id/textViewTC" />

        <TextView
            android:id="@+id/TextView_TC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="14dp"
            android:text="Terms and Conditions"
            android:textColor="#63d065"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_radius_sign_btn"
        android:text="Register"
        android:textColor="#ffffff"
        android:textSize="15sp" />




</LinearLayout>